# dflow-sdk

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore  mdx-components.tsx  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.js
docs/app/: global.css  layout.config.tsx  layout.tsx  page.tsx  robots.ts  sitemap.ts
docs/app/api/search/: route.ts
docs/app/api/search/python/: route.ts
docs/app/api/search/typescript/: route.ts
docs/app/docs/: page.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/app/docs/python/: layout.tsx
docs/app/docs/python/[[...slug]]/: page.tsx
docs/app/docs/python/llms.txt/: route.ts
docs/app/docs/typescript/: layout.tsx
docs/app/docs/typescript/[[...slug]]/: page.tsx
docs/app/docs/typescript/llms.txt/: route.ts
docs/app/llms-full.txt/: route.ts
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api-reference/: events.mdx  intent.mdx  live-data.mdx  markets.mdx  orderbook.mdx  orders.mdx  prediction-market.mdx  series.mdx  solana-helpers.mdx  venues.mdx
docs/content/docs/getting-started/: installation.mdx  quickstart.mdx
docs/content/docs/python/: index.mdx  meta.json
docs/content/docs/python/api-reference/: client.mdx  events.mdx  intent.mdx  live-data.mdx  markets.mdx  orderbook.mdx  orders.mdx  prediction-market.mdx  proof.mdx  search.mdx  series.mdx  solana-helpers.mdx  sports.mdx  swap.mdx  tags.mdx  tokens.mdx  trades.mdx  venues.mdx  websocket.mdx
docs/content/docs/python/getting-started/: installation.mdx  quickstart.mdx
docs/content/docs/python/reference/: constants.mdx  error-handling.mdx  llms-txt.mdx
docs/content/docs/reference/: constants.mdx
docs/content/docs/typescript/: index.mdx  meta.json
docs/content/docs/typescript/api-reference/: client.mdx  events.mdx  intent.mdx  live-data.mdx  markets.mdx  orderbook.mdx  orders.mdx  proof.mdx  search.mdx  series.mdx  solana-helpers.mdx  sports.mdx  swap.mdx  tags.mdx  tokens.mdx  trades.mdx  websocket.mdx
docs/content/docs/typescript/getting-started/: quickstart.mdx
docs/content/docs/typescript/reference/: constants.mdx  error-handling.mdx  llms-txt.mdx
docs/lib/: get-llm-text.ts  mdx-utils.ts  source.ts
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/src/dflow/: __init__.py
python/src/dflow/api/: __init__.py
python/src/dflow/api/metadata/: __init__.py  live_data.py  markets.py  orderbook.py  sports.py  tags.py  trades.py
python/src/dflow/api/trade/: prediction_market.py  tokens.py  venues.py
python/src/dflow/solana/: transactions.py
python/src/dflow/types/: events.py  live_data.py  markets.py  orderbook.py  orders.py  series.py  tags.py  trades.py  websocket.py
python/src/dflow/utils/: constants.py
python/src/dflow/websocket/: __init__.py
python/tests/: __init__.py  conftest.py  test_apis.py  test_constants.py  test_http.py  test_retry.py  test_types.py
src/: client.ts  index.ts
src/api/metadata/: events.ts  liveData.ts  markets.ts  orderbook.ts  search.ts  series.ts  sports.ts  tags.ts  trades.ts
src/api/trade/: index.ts  intent.ts  orders.ts  predictionMarket.ts  swap.ts  tokens.ts  venues.ts
src/solana/: positions.ts  transactions.ts
src/types/: common.ts  events.ts  index.ts  markets.ts  orderbook.ts  orders.ts  websocket.ts
src/utils/: constants.ts  http.ts
src/websocket/: client.ts
test/: e2e-test.ts  live-api-test.ts
