[project]
name = "dflow-sdk"
version = "0.1.0"
description = "Python SDK for DFlow on Solana - prediction markets and trading"
authors = [{name = "DFlow Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["dflow", "solana", "prediction-markets", "kalshi", "trading", "defi", "crypto", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "solana>=0.34.0",
    "solders>=0.21.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-httpx>=0.30.0",
]

[project.urls]
Homepage = "https://dflow-sdk.vercel.app"
Documentation = "https://dflow-sdk.vercel.app/docs"
Repository = "https://github.com/vaibhav0806/dflow-sdk"
Issues = "https://github.com/vaibhav0806/dflow-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dflow"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
